# Swift

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CodingGuidelines.md  GenerateWin64vs2019.bat  GenerateWin64vs2022.bat  LICENSE-MIT  README.md  SetupKuraQT.bat  csCMakeConfig.cmake
Code/: CMakeLists.txt
Code/BuildSystem/CMake/: FindDirectX11.cmake  FindEzEmbree.cmake  FindEzOpenXR.cmake  FindEzVulkan.cmake  FindPkgMacros.cmake  csPlatformVars.cmake  csUtils.cmake
Code/BuildSystem/CMake/CMakeUtils/: csUtilsAndroid.cmake  csUtilsCI.cmake  csUtilsCppFlags.cmake  csUtilsDX11.cmake  csUtilsDependency.cmake  csUtilsDetect.cmake  csUtilsEmbree.cmake  csUtilsExternal.cmake  csUtilsNuGet.cmake  csUtilsPCH.cmake  csUtilsQt.cmake  csUtilsRenderer.cmake  csUtilsSubmodule.cmake  csUtilsTarget.cmake  csUtilsTargetCS.cmake  csUtilsUWP.cmake  csUtilsUnityFiles.cmake  csUtilsVars.cmake  csUtilsVcpkg.cmake  csUtilsVulkan.cmake
Code/BuildSystem/CMake/ExternalLibraries/: CMAKE_OpenVR.txt
Code/BuildSystem/CMake/ProbingSrc/: ArchitectureDetect.c
Code/Engine/: CMakeLists.txt  csBuildInfo.h
Code/Tools/: CMakeLists.txt
Code/UnitTests/: CMakeLists.txt
Utilities/clang-tidy/ez/: CMakeLists.txt
